objects/tdc_cti__Call_Routing__c/tdc_cti__Call_Routing__c.object-meta.xml
<CustomObject>
    <label>Call Routing</label>
    <nameField>
        <label>Call Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>