objects/tdc_cti__Call_Routing__c/fields/tdc_cti__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>