objects/tdc_cti__Call_Routing__c/fields/tdc_cti__Missed_Call_Notification_Users__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Missed_Call_Notification_Users__c</fullName>
    <label>Missed Call Notification Users</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>