objects/tdc_cti__Call_Routing__c/fields/tdc_cti__Primary_User__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Primary_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store user data values for a call routing.</description>
    <label>Primary User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Routing</relationshipName>
    <type>Lookup</type>
</CustomField>