objects/tdc_cti__Call_Routing__c/listViews/CTI_Incoming_Call_Queue_Call_Routing.listView-meta.xml
<ListView>
    <fullName>CTI_Incoming_Call_Queue_Call_Routing</fullName>
    <filterScope>Queue</filterScope>
    <label>CTI Incoming Call Queue</label>
    <queue>CTI_Incoming_Call_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>